# skilloptdiy

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: skillopt-coco-hidden-experiment-report.md  skillopt-coding-hidden-ablation-report.md  skillopt-cross-agent-eval-report.md  skillopt-executive-protocol.md  skillopt-lr-sensitivity-report.md  skillopt-minimal-ablation-report.md  skillopt-prompt-meta-v2-report.md  skillopt-proposal-log-ablation-report.md  skillopt-real-external-proposal-log-report.md  skillopt-training-stability-minimal.md
scripts/: materialize_paper_searchqa.py  paper_searchqa_selection_controller.py  paper_searchqa_train_controller.py  run_paper_searchqa.py  run_paper_zero_cost_gate.py
tests/: test_atomic_edits.py  test_build_coding_hidden_v2_targeted_baseline.py  test_ccr_agent_wrapper.py  test_ccr_hidden_eval.py  test_coco_agent_wrapper.py  test_coco_hidden_eval.py  test_codex_agent_wrapper.py  test_coding_hidden_ablation.py  test_coding_hidden_lr_sensitivity.py  test_coding_hidden_proposal_log_ablation.py  test_coding_hidden_v2.py  test_coding_hidden_v2_experiment.py  test_coding_hidden_v2_locked_eval.py  test_coding_hidden_v2_matrix.py  test_coding_hidden_v2_model_skill_compare.py  test_coding_plugin.py  test_coding_real_fixtures.py  test_command_editor.py  test_contract_evidence.py  test_contract_rejection_evidence.py  test_cross_agent_skill_eval.py  test_demo_agent.py  test_development_gate.py  test_executive_cli.py  test_executive_optimizer.py  test_experiment_runner.py  test_io.py  test_kilo_agent_wrapper.py  test_kilo_hidden_eval.py  (+17 more)
(+394 files in other folders)
